--- a/public/index.html
+++ b/public/index.html
@@ -24,17 +24,35 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
     <title>React App</title>
   </head>
   <body>
-    <!-- <script>
+    <script>
       var config = {
-        theme: {
-          backgroundColor: '#282c34'
-        },
-        
+        // theme: {
+        //   palette: {
+        //   type: 'light',
+        //   primary: {
+        //     main: '#3f80b5',
+        //   },
+        //   secondary: {
+        //     main: '#f1477c',
+        //   },
+        // },
+        // },
+        // api: {
+        //   baseUrl: 'https://easyfront.xt.lv/',
+        // }
       }
-    </script> -->
+    </script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="core-root"></div>
     <!--
