--- a/public/index.html
+++ b/public/index.html
@@ -37,20 +37,20 @@
   <body>
     <script>
       var config = {
-        // theme: {
-        //   palette: {
-        //   type: 'light',
-        //   primary: {
-        //     main: '#3f80b5',
-        //   },
-        //   secondary: {
-        //     main: '#f1477c',
-        //   },
-        // },
-        // },
-        // api: {
-        //   baseUrl: 'https://easyfront.xt.lv/',
-        // }
+        theme: {
+          palette: {
+          type: 'light',
+          primary: {
+            main: '#3f80b5',
+          },
+          secondary: {
+            main: '#f1477c',
+          },
+        },
+        },
+        api: {
+          baseUrl: 'https://easyfront.xt.lv/',
+        }
       }
     </script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
